--- a/index.html
+++ b/index.html
@@ -2581,15 +2581,124 @@
         // FUNCIONES DE ACCIONES DE REPARACIÓN
         
         function imprimirComprobante(ordenId) {
-            const reparacion = reparaciones.find(r => r.id === ordenId) || historialEntregados.find(r => r.id === ordenId);
-            if (!reparacion) return;
+  const reparacion = reparaciones.find(r => r.id === ordenId) || historialEntregados.find(r => r.id === ordenId);
+  if (!reparacion) return;
 
-            const ventanaImpresion = window.open('', '_blank');
-            ventanaImpresion.document.write(`
-                <!DOCTYPE html>
-                <html>
-                <head>
-                    <title>Comprobante #${reparacion.id}</title>
+  const observaciones = (reparacion.observaciones || '').trim();
+
+  const w = window.open('', '_blank');
+
+  w.document.write(`
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset="utf-8" />
+      <title>Comprobante #\${reparacion.id}</title>
+      <style>
+        @page { size: A4; margin: 10mm; }
+        html, body { margin:0; padding:0; }
+        body { font-family: Arial, sans-serif; font-size: 12px; line-height: 1.35; }
+        .print-page { width: 190mm; margin: 0 auto; padding: 0; }
+        .print-header { text-align: center; margin-bottom: 8px; }
+        .print-title { font-size: 18px; font-weight: 700; margin: 0; }
+        .print-subtitle { font-size: 16px; font-weight: 700; margin: 2px 0; }
+        .print-order { font-size: 16px; font-weight: 700; margin: 2px 0 8px; }
+        .print-section { margin-bottom: 8px; }
+        .print-row { display: flex; gap: 6px; margin-bottom: 4px; }
+        .print-label { width: 110px; font-weight: 700; flex-shrink: 0; }
+        .print-value { flex: 1; word-break: break-word; }
+        .print-row-stack { flex-direction: column; align-items: flex-start; gap: 2px; }
+        .print-separator { border-top: 1px dashed #000; margin: 10px 0; }
+        .print-footer { margin-top: 10px; font-size: 11px; border-top: 1px solid #000; padding-top: 6px; text-align: center; line-height: 1.4; }
+        @media print {
+          .print-header, .print-section, .print-footer { page-break-inside: avoid; }
+        }
+      </style>
+    </head>
+    <body>
+      <div class="print-page">
+
+        <!-- ORIGINAL -->
+        <div class="print-header">
+          <div class="print-title">Fixly Taller</div>
+          <div class="print-subtitle">ORIGINAL</div>
+          <div class="print-order">ORDEN #\${reparacion.id}</div>
+        </div>
+
+        <div class="print-section">
+          <div class="print-row"><div class="print-label">Cliente:</div><div class="print-value">\${reparacion.cliente}</div></div>
+          <div class="print-row"><div class="print-label">DNI:</div><div class="print-value">\${reparacion.dni || ''}</div></div>
+          <div class="print-row"><div class="print-label">Tel:</div><div class="print-value">\${reparacion.telefono || ''}</div></div>
+          <div class="print-row"><div class="print-label">Equipo:</div><div class="print-value">\${reparacion.equipo}</div></div>
+          <div class="print-row print-row-stack">
+            <div class="print-label">Problema:</div>
+            <div class="print-value">\${reparacion.problema}</div>
+          </div>
+          <div class="print-row print-row-stack">
+            <div class="print-label">Observaciones:</div>
+            <div class="print-value">\${observaciones || '-'}</div>
+          </div>
+          <div class="print-row"><div class="print-label">Técnico:</div><div class="print-value">\${reparacion.tecnico || ''}</div></div>
+          <div class="print-row"><div class="print-label">Estado:</div><div class="print-value">\${(reparacion.estado || '').toUpperCase()}</div></div>
+          <div class="print-row"><div class="print-label">Fecha:</div><div class="print-value">\${reparacion.fecha || ''}</div></div>
+          <div class="print-row"><div class="print-label">Anticipo:</div><div class="print-value">\$ \${(reparacion.anticipo || 0).toLocaleString()}</div></div>
+          <div class="print-row"><div class="print-label">Total:</div><div class="print-value">\$ \${(reparacion.costoEstimado || 0).toLocaleString()}</div></div>
+          <div class="print-row"><div class="print-label">Saldo:</div><div class="print-value">\$ \${((reparacion.costoEstimado || 0) - (reparacion.anticipo || 0)).toLocaleString()}</div></div>
+        </div>
+
+        <div class="print-separator"></div>
+
+        <!-- COPIA CLIENTE -->
+        <div class="print-header">
+          <div class="print-title">Fixly Taller</div>
+          <div class="print-subtitle">COPIA CLIENTE</div>
+          <div class="print-order">ORDEN #\${reparacion.id}</div>
+        </div>
+
+        <div class="print-section">
+          <div class="print-row"><div class="print-label">Cliente:</div><div class="print-value">\${reparacion.cliente}</div></div>
+          <div class="print-row"><div class="print-label">DNI:</div><div class="print-value">\${reparacion.dni || ''}</div></div>
+          <div class="print-row"><div class="print-label">Tel:</div><div class="print-value">\${reparacion.telefono || ''}</div></div>
+          <div class="print-row"><div class="print-label">Equipo:</div><div class="print-value">\${reparacion.equipo}</div></div>
+          <div class="print-row print-row-stack">
+            <div class="print-label">Problema:</div>
+            <div class="print-value">\${reparacion.problema}</div>
+          </div>
+          <div class="print-row print-row-stack">
+            <div class="print-label">Observaciones:</div>
+            <div class="print-value">\${observaciones || '-'}</div>
+          </div>
+          <div class="print-row"><div class="print-label">Técnico:</div><div class="print-value">\${reparacion.tecnico || ''}</div></div>
+          <div class="print-row"><div class="print-label">Estado:</div><div class="print-value">\${(reparacion.estado || '').toUpperCase()}</div></div>
+          <div class="print-row"><div class="print-label">Fecha:</div><div class="print-value">\${reparacion.fecha || ''}</div></div>
+          <div class="print-row"><div class="print-label">Anticipo:</div><div class="print-value">\$ \${(reparacion.anticipo || 0).toLocaleString()}</div></div>
+          <div class="print-row"><div class="print-label">Total:</div><div class="print-value">\$ \${(reparacion.costoEstimado || 0).toLocaleString()}</div></div>
+          <div class="print-row"><div class="print-label">Saldo:</div><div class="print-value">\$ \${((reparacion.costoEstimado || 0) - (reparacion.anticipo || 0)).toLocaleString()}</div></div>
+        </div>
+
+        <div class="print-footer">
+          <strong>Mundo Electronico - Moreno 1878 - Tel 11 3820-8152</strong><br>
+          Las reparaciones tienen una garantía de 60 días únicamente por la misma falla reparada.<br>
+          Los repuestos están garantizados solo por defectos de fábrica.<br>
+          La garantía no cubre daños ocasionados por golpes, roturas, líquidos o uso indebido.<br>
+          Los trabajos de software y configuraciones no tienen garantía.
+        </div>
+
+      </div>
+    </body>
+    </html>
+  `);
+
+  w.document.close();
+  const cerrar = () => { try { w.close(); } catch(e){} };
+  try { w.addEventListener('afterprint', cerrar); } catch(e){}
+  w.onafterprint = cerrar;
+  setTimeout(() => {
+    try { w.focus(); } catch(e){}
+    try { w.print(); } catch(e){}
+    setTimeout(cerrar, 1200);
+  }, 100);
+}</title>
                     <style>
   @page { size: A4; margin: 10mm; }
   body { font-family: Arial, sans-serif; margin:0; padding:0; width:190mm; margin-left:auto; margin-right:auto; font-size:14pt; line-height:1.2; }
@@ -5790,9 +5899,3 @@ on = function(){
 </script>
 </body>
 </html>
-<style>
-@media print {
-  .print-row-stack{display:flex;flex-direction:column;gap:2px;margin-bottom:8px}
-  .print-row-stack .print-value{line-height:1.4;word-break:break-word;white-space:pre-wrap}
-}
-</style>
