--- a/index.html
+++ b/index.html
@@ -2593,6 +2593,8 @@
                     <style>
   @page { size: A4; margin: 10mm; }
   body { font-family: Arial, sans-serif; margin:0; padding:0; width:190mm; margin-left:auto; margin-right:auto; font-size:14pt; line-height:1.2; }
+  
+  
   .print-header { text-align:center; margin-bottom:8pt; border-bottom:1px solid #000; padding-bottom:4pt; }
   .print-title { font-size:20pt; font-weight:700; margin-bottom:2pt; }
   .print-subtitle{ font-size:18pt; font-weight:700; margin-bottom:3pt; }
@@ -2669,11 +2671,14 @@
                             </div>
           <div class="print-section">
               <div class="print-label" style="margin-bottom: 4pt;">Problema:</div>
-              <div style="font-size: 15pt; margin-bottom: 8pt; word-wrap: break-word; white-space: pre-wrap;">\${reparacion.problema}</div>
+             <div style="font-size: 15pt; margin-bottom: 8pt; word-wrap: break-word; white-space: pre-wrap;">
+  ${reparacion.problema || "-"}
+</div>
 
               <div class="print-label" style="margin-bottom: 4pt;">Observaciones:</div>
-              <div style="font-size: 15pt; margin-bottom: 10pt; word-wrap: break-word; white-space: pre-wrap;">\${(reparacion.observaciones || '').trim() || '-'}</div>
-          </div>
+              <div style="font-size: 15pt; margin-bottom: 10pt; word-wrap: break-word; white-space: pre-wrap;">
+  ${(reparacion.observaciones || "").trim() || "-"}
+</div>
                     
                     <div class="print-section">
                         <div class="print-row">
