--- a/index.html
+++ b/index.html
@@ -2641,14 +2641,18 @@
                             <div class="print-label">Tel:</div>
                             <div class="print-value">${reparacion.telefono}</div>
                       
-                            </div>
-                            <div class="print-label">Problema:</div>
-                            <div class="print-value">${reparacion.problema}</div>
-                        </div>
-                            <div class="print-row print-row--stack">
-                            <div class="print-label">Observaciones:</div>
-                             <div class="print-value">${(reparacion.observaciones || '').trim() || '-'}</div>
-                    </div>
+                          <div class="print-row">
+  <div class="print-label">Problema:</div>
+  <div class="print-value" style="white-space: pre-wrap; word-break: break-word;">
+    ${reparacion.problema || "-"}
+  </div>
+</div>
+                           <div class="print-row">
+  <div class="print-label">Observaciones:</div>
+  <div class="print-value" style="white-space: pre-wrap; word-break: break-word;">
+    ${(reparacion.observaciones || "").trim() || "-"}
+  </div>
+</div>
                     
                     <div class="print-section">
                         <div class="print-row">
