cambio estado index.html

--- a/index.html
+++ b/index.html
@@ -1679,21 +1679,16 @@
 </div>
 <div>
 <label class="block text-sm font-medium mb-2">
-       Técnico Asignado
+       Observaciones 
       </label>
-<select class="w-full px-4 py-2 border rounded-lg" id="edit-tecnico">
+<select class="w-full px-4 py-2 border rounded-lg" id="observaciones">
 <option value="">
-        Seleccionar técnico
+        Problema corregido / Reparado 
        </option>
-<option value="Ana Silva">
-        Ana Silva - iPhone y Samsung
+<option value="reparado">
+        No reparado / Devolucion 
        </option>
-<option value="Juan Pérez">
-        Juan Pérez - Xiaomi y Motorola
-       </option>
-<option value="Luis Rodríguez">
-        Luis Rodríguez - Tablets y Notebooks
-       </option>
+<option value="No reparado">
 </select>
 </div>
 <div>
