--- a/index.html
+++ b/index.html
@@ -1678,20 +1678,15 @@
 </select>
 </div>
 <div>
-<label class="block text-sm font-medium mb-2">
-       Observaciones 
-      </label>
-<select class="w-full px-4 py-2 border rounded-lg" id="observaciones">
-<option value="">
-        Problema corregido / Reparado 
-       </option>
-<option value="reparado">
-        No reparado / Devolucion 
-       </option>
-<option value="No reparado">
-</select>
+  <label class="block text-sm font-medium mb-2">Observaciones</label>
+  <select class="w-full px-4 py-2 border rounded-lg" id="observaciones">
+    <option value="">Seleccionar…</option>
+    <option value="reparado">Problema corregido / Reparado</option>
+    <option value="no-reparado">No reparado / Devolución</option>
+    <option value="presupuesto-rechazado">Presupuesto rechazado</option>
+    <option value="sin-repuesto">No se consigue repuesto</option>
+  </select>
 </div>
-<div>
 <label class="block text-sm font-medium mb-2">
        Costo Final
       </label>
