--- a/index.html
+++ b/index.html
@@ -1678,13 +1678,12 @@
 </select>
 </div>
 <div>
-  <label class="block text-sm font-medium mb-2">Observaciones</label>
-  <select class="w-full px-4 py-2 border rounded-lg" id="observaciones">
+  <label class="block text-sm font-medium mb-2">Estado del equipo</label>
+  <select class="w-full px-4 py-2 border rounded-lg" id="estado-equipo">
     <option value="">Seleccionar…</option>
-    <option value="reparado">Problema corregido / Reparado</option>
-    <option value="no-reparado">No reparado / Devolución</option>
-    <option value="presupuesto-rechazado">Presupuesto rechazado</option>
-    <option value="sin-repuesto">No se consigue repuesto</option>
+    <option value="reparado">Reparado</option>
+    <option value="no-reparado">No reparado</option>
+    <option value="devolucion">No reparado / Devolución</option>
   </select>
 </div>
 <label class="block text-sm font-medium mb-2">
