--- a/index.html
+++ b/index.html
@@ -1593,7 +1593,8 @@
 <input class="w-full border rounded-lg p-2" id="costo" name="costo" type="number"/>
 </div><div>
 <label class="block text-sm font-medium mb-2">
-       Estado del equipo</label>
+       Técnico Asignado
+      </label>
 <select class="w-full px-4 py-2 border rounded-lg" id="select-tecnico" name="tecnico">
 <option value="">
         Seleccionar técnico
@@ -1677,14 +1678,25 @@
 </select>
 </div>
 <div>
-  <label class="block text-sm font-medium mb-2">Estado del equipo</label>
-  <select class="w-full px-4 py-2 border rounded-lg" id="estado-equipo">
-    <option value="">Seleccionar…</option>
-    <option value="reparado">Reparado</option>
-    <option value="no-reparado">No reparado</option>
-    <option value="devolucion">No reparado / Devolución</option>
-  </select>
+<label class="block text-sm font-medium mb-2">
+       Técnico Asignado
+      </label>
+<select class="w-full px-4 py-2 border rounded-lg" id="edit-tecnico">
+<option value="">
+        Seleccionar técnico
+       </option>
+<option value="Ana Silva">
+        Ana Silva - iPhone y Samsung
+       </option>
+<option value="Juan Pérez">
+        Juan Pérez - Xiaomi y Motorola
+       </option>
+<option value="Luis Rodríguez">
+        Luis Rodríguez - Tablets y Notebooks
+       </option>
+</select>
 </div>
+<div>
 <label class="block text-sm font-medium mb-2">
        Costo Final
       </label>
@@ -2029,7 +2041,7 @@
 
         function cargarTecnicos() {
             const selectTecnico = document.getElementById('select-tecnico');
-            const editTecnico = document.getElementById('estado-equipo');
+            const editTecnico = document.getElementById('edit-tecnico');
             const filterTecnico = document.getElementById('filter-tecnico');
             const filtroTecnicoHistorial = document.getElementById('filtro-tecnico-historial');
             
@@ -2285,7 +2297,7 @@
             document.getElementById('edit-cliente').value = reparacion.cliente;
             document.getElementById('edit-equipo').value = reparacion.equipo;
             document.getElementById('edit-estado').value = reparacion.estado;
-            document.getElementById('estado-equipo').value = reparacion.tecnico;
+            document.getElementById('edit-tecnico').value = reparacion.tecnico;
             document.getElementById('edit-costo').value = reparacion.costoEstimado;
             
             // Resetear mensajes
@@ -2501,26 +2513,10 @@
         }
 
         function guardarCambiosEstado() {
-  // Guardar estado del equipo desde el select
-  (function(){
-    try {
-      var _sel = document.getElementById("estado-equipo");
-      if (_sel && typeof reparacionEditando === "object" && reparacionEditando) {
-        var _val = _sel.value || "";
-        reparacionEditando.estadoEquipo = _val;
-        // Compatibilidad: si la UI antigua usa "tecnico" para mostrar una columna,
-        // reflejamos el mismo valor (no rompe nada si no se usa).
-        if (typeof reparacionEditando.tecnico !== "undefined") {
-          reparacionEditando.tecnico = _val || (reparacionEditando.tecnico || "");
-        }
-      }
-    } catch(e) { /* noop */ }
-  })();
-
             if (!reparacionEditando) return;
 
             const nuevoEstado = document.getElementById('edit-estado').value;
-            const nuevoTecnico = document.getElementById('estado-equipo').value;
+            const nuevoTecnico = document.getElementById('edit-tecnico').value;
             const nuevoCosto = parseInt(document.getElementById('edit-costo').value) || reparacionEditando.costoEstimado;
 
             // Actualizar la reparación
@@ -2775,22 +2771,8 @@ ventanaImpresion.document.close();
         }
 
         function editarReparacion(ordenId) {
-  // Precargar el nuevo campo "estado-equipo"
-  (function(){
-    try {
-      var _sel = document.getElementById("estado-equipo");
-      if (_sel && typeof reparacionEditando === "object" && reparacionEditando) {
-        _sel.value = (reparacionEditando.estadoEquipo || reparacionEditando.tecnico || "");
-      }
-    } catch(e) { /* noop */ }
-  })();
-
             showEditEstado(ordenId);
         }
-        function editarReparacion(id){
-         const r = reparaciones.find(x => x.id === String(id));
-  if(!r) return alert('Reparación no encontrada');
-          }
 function imprimirComprobantePedido(pedidoId){
   const p = (typeof pedidos!=='undefined' && Array.isArray(pedidos)) 
               ? pedidos.find(x=>String(x.id)===String(pedidoId)) : null;
