--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
             margin-right: 8px;
             font-size:13px;
         }
+
+        /* Fix Observaciones layout: put Observaciones value on new line under the label */
+        .print-row.print-row--stack .print-value {
+            margin-left: 60px;
+            white-space: pre-wrap;
+        }
         
         .print-separator { display: none !important; }
         
