--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         
         .print-signature { display: none !important; }
         
-        ..print-footer {
+        .print-footer {
   margin-top: 8px;
   font-size: 8px;
   text-align: center;   
